--- a/css/styles.css
+++ b/css/styles.css
@@ -402,11 +402,15 @@ html, body {
     height: 32px;
     position: absolute;
     top: 14px;
-    right: 0; }
+    right: 0;
+    text-align: center; }
   #infostand .furniture {
     position: absolute;
-    top: 4px;
-    right: 12px; }
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: -12px; }
   #infostand .infostand-wrapper-text {
     top: 56px;
     right: 0;
